# methodos

./: README.md  dev-requirements.txt  pyproject.toml  requirements.txt
src/methodos/: client.py
src/methodos/models/: config.py  responses.py
